<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Formula Manager</string>
    <string name="label_creation">Create Formula</string>
    <string name="label_calculation">Calculate</string>
    <string name="action_settings">Facebook log in/out</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search for formula</string>
    <string name="action_new">Add Formula</string>
    <string name="action_share">Share Formula</string>
    <string name="action_done">Done</string>
    <string name="label_name">Name your new formula</string>
    <string name="label_raw_formula">Create your formula</string>
    <string name="label_formula">Formula</string>
    <string name="label_params">Parameters</string>
    <string name="label_categories">Shown categories</string>
    <string name="label_empty">No formulas</string>
    <string name="label_add">Add</string>
    <string name="label_ok">OK</string>
    <string name="label_save">Save</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_param_name">Name your new parameter</string>
    <string name="label_param_type1">Regular</string>
    <string name="label_param_type2">Index</string>
    <string name="label_param_type3">Stepping</string>
    <string name="title_param_create">New parameter for formula</string>
    <string name="functions_list_label">Functions list</string>
    <string name="show_favs">Only favorites</string>

    <string name="drawer_open">drawer opened</string>
    <string name="drawer_close">drawer closed</string>
    <string name="app_id">261713630674892</string>
    <string name="compute">Compute</string>
    <string name="update">Update Formulas</string>

</resources>
