<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/param_name"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:hint="@string/label_param_name"
        android:inputType="text"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@+id/param_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        >

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_param_type1"
            android:id="@+id/radioButton1"
            android:checked="true" />

        <!--RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_param_type2"
            android:id="@+id/radioButton2" /-->

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_param_type3"
            android:id="@+id/radioButton3" />
    </RadioGroup>

</RelativeLayout>