<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/creation_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="vertical">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="2"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/formula_name"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="10"
                android:hint="@string/label_name"
                android:textSize="25sp" />

            <Button
                android:id="@+id/save_button"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/label_save"
                android:background="@drawable/roundedbutton"
                android:textSize="30sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="1dp"
            android:background="@color/hologreen_color" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/label_params"
            android:textSize="20sp" />

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="0px"
            android:layout_weight="7"
            android:animateLayoutChanges="true">

            <android.support.v7.widget.GridLayout
                android:id="@+id/params_grid"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="10dip"
                android:paddingBottom="5dp"
                android:stretchMode="spacingWidth"
                app:orientation="horizontal"
                app:columnCount="8">

                <ImageButton
                    android:id="@+id/add_button"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/ic_action_new"
                    android:background="@drawable/roundedbutton"
                    android:padding="3dp" />


            </android.support.v7.widget.GridLayout>
        </ScrollView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="1dp"
            android:background="@color/hologreen_color" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:text="@string/label_formula"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/formulaText"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="5"
            android:inputType="textMultiLine"
            android:numeric="decimal"
            android:hint="@string/label_raw_formula"
            android:textSize="30sp" />

    </LinearLayout>

    <ExpandableListView
        android:id="@+id/function_list"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:choiceMode="singleChoice"
        android:divider="@android:color/black"
        android:dividerHeight="1dp"
        android:indicatorRight="430dp" />

</android.support.v4.widget.DrawerLayout>